tests/baselines/reference/argumentsBindsToFunctionScopeArgumentList.errors.txt
error TS5107: Option 'alwaysStrict=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
argumentsBindsToFunctionScopeArgumentList.ts(3,5): error TS2322: Type 'number' is not assignable to type 'IArguments'.


!!! error TS5107: Option 'alwaysStrict=false' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== argumentsBindsToFunctionScopeArgumentList.ts (1 errors) ====
    var arguments = 10;
    function foo(a) {
        arguments = 10;  /// This shouldnt be of type number and result in error.
        ~~~~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'IArguments'.
    }